<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">UT3Romanos</string>
    <string name="Jhon">Jhon</string>
    <string name="hello">Hello</string>
    <string name="GAMES">GAMES</string>
    <string name="HEALTH">HEALTH</string>
    <string name="MAPS">MAPS</string>
    <string name="trending" translatable="false">TRENDING</string>
    <string name="dummy" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="home" translatable="false">home</string>
    <string name="favorite" translatable="false">favorite</string>
    <string name="account" translatable="false">account</string>
    <string name="settings" translatable="false">settings</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="nombre" translatable="false">nombre</string>
    <string name="CLINIC">CLINICS</string>
    <string name="randomImage" translatable="false" />
    <string name="SEND">Send</string>
    <string name="Correct">Correct</string>
    <string name="Wrong">Wrong</string>
    <string name="resta">What is the result of the subtraction?</string>
    <string name="suma">What is the result of the sum?</string>
    <string name="multiplicacion">" What is the result of the multiplication?"</string>
    <string name="division">" What is the result of the division?"</string>
    <string name="next">NEXT</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="restart">RESTART</string>
    <string name="exit">EXIT</string>
    <string name="congrats">Congrats</string>
    <string name="seleccione_respuesta">Select answer</string>
    <string name="search_elements" translatable="false">Search elements</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="radiobutton" translatable="false" tools:ignore="DuplicateDefinition">RadioButton</string>
    <string name="direccion" translatable="false">direccion</string>
    <string name="localidad" translatable="false">localidad</string>
    <string name="telefono" translatable="false">telefono</string>
</resources>