<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <!--
        items for a single row of RecyclerView
        -->
        <TextView
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/localidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/localidad"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textColor="#000"
            android:textSize="15sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>